[package]
name = "crusty-api"
version = "0.1.0"
authors = ["Phoomparin Mano <poom@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-cors = "0.5.3"
reqwest = "0.10.9"

juniper = "0.15.1"
juniper_actix = { version = "0.2.1", features = ["subscriptions"] }
juniper_graphql_ws = "0.2.1"

openssl = "0.10.29"

serde = "1.0.60"
serde_json = "1.0.60"
chrono = "0.4"

lazy_static = "1.4.0"
hashbrown = "0.9"
tokio = { version = "0.3.6", features = ["time"] }
