[package]
name = "crusty-api"
version = "0.1.0"
authors = ["Phoomparin Mano <poom@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "3.2.0"
#actix-cors = "0.5.3"
reqwest = "0.10.9"

actix-web = "3.3"
actix-cors = "0.5.3"
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
env_logger = "0.8"
#serde = "1.0"
#serde_json = "1.0"
rand = "0.7"

#juniper = "0.15.1"

juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"], branch = "master" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper", branch = "master" }

juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper", branch = "master" }

openssl = "0.10.29"

serde = "1.0.60"
serde_json = "1.0.60"
chrono = "0.4"

lazy_static = "1.4.0"
hashbrown = "0.9"
#tokio = { version = "0.2", features = ["time", "macros", "rt-core"] }
